# oasis-home-assignment

./: .geminiignore  .gitignore  GEMINI.md  README.md  docker-compose.yml  oasis-nhi.code-workspace
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/auth/: router.py
backend/app/api/endpoints/: jira.py
backend/app/api/jobs/: router.py
backend/app/core/: auth.py  config.py  security.py  user_store.py
backend/app/models/: models.py
backend/app/services/: ai_summary.py  blog_scraper.py  jira.py
backend/tests/: conftest.py  test_api_keys.py  test_automated_job.py  test_jira_api.py  test_jira_caching.py  test_jobs.py  test_main.py
frontend/: .dockerignore  README.md  package-lock.json  package.json  playwright-ct.config.ts  playwright.config.ts  vite.config.ts
frontend/playwright/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: index.ts
frontend/src/components/: api-keys-manager.tsx  jira-config.tsx  main-content.tsx
frontend/src/models/: index.ts
frontend/src/pages/: dashboard.tsx  login.tsx  register.tsx
frontend/tests/component_disabled/: Dummy.tsx  api-keys-manager.spec.tsx  main-content.spec.tsx  mock-data.ts
frontend/tests/e2e/: auth.spec.ts  dashboard.spec.ts  jira-flow.spec.ts
frontend/tests/e2e/helpers/: auth.ts
