[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "bcrypt==4.0.1",
    "beautifulsoup4>=4.14.3",
    "fakeredis>=2.32.0",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "fastapi-limiter>=0.1.6",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-client>=2.0.6",
    "pydantic-settings>=2.13.1",
    "pyrate-limiter>=3.9.0",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "redis>=6.4.0",
    "uvicorn>=0.41.0",
    "tenacity>=9.1.4",
]
